--- a/.gitignore
+++ b/.gitignore
@@ -1,49 +1,20 @@
-# macOS
-.DS_Store
-.AppleDouble
-.LSOverride
+# API Keys and sensitive configuration
+assets/js/config.js
 
-# Thumbnails
-._*
+# Environment files
+.env
+.env.local
+.env.production
 
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-.com.apple.timemachine.donotpresent
-
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
+# Node modules (if you add backend later)
+node_modules/
+package-lock.json
+yarn.lock
 
 # IDE
 .vscode/
 .idea/
-*.swp
-*.swo
-*~
 
-# Logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Optional: node_modules if you add npm later
-node_modules/
-
-# Environment variables and secrets
-.env
-.env.local
-.env.production
-.env.development
-
-# Analytics secrets (contains API keys)
-ANALYTICS_BILGILERI.md
-
+# OS
+.DS_Store
+Thumbs.db
