🏢 Marka Güncellemesi: HARÇ YAZILIM → HARÇ MUHASEBE + Yapay Zeka Vurgusu
✅ Değişiklikler:

1. **index.html** - Ana Sayfa:
   ❌ "HARÇ YAZILIM"
   ✅ "HARÇ MUHASEBE"

   - Title: HARÇ MUHASEBE - Yapay Zeka Destekli İnşaat Muhasebe Yazılımı
   - H1: Yapay Zeka Destekli İnşaat Muhasebesi - HARÇ MUHASEBE
   - Meta description: "HARÇ MUHASEBE: Yapay zeka destekli..." ⭐5.0/5
   - Subtitle: "Yapay zeka ile" vurgusu eklendi
   - Open Graph: HARÇ MUHASEBE + AI vurgusu
   - Twitter Cards: HARÇ MUHASEBE + AI vurgusu
   - Tüm Schema.org: HARÇ MUHASEBE
   - Copyright: © 2025 HARÇ MUHASEBE

2. **kullanim-kosullari.html**:
   ✅ Tüm HARÇ YAZILIM → HARÇ MUHASEBE

3. **gizlilik-politikasi.html**:
   ✅ Tüm HARÇ YAZILIM → HARÇ MUHASEBE

4. **package.json**:
   ✅ author: HARÇ MUHASEBE

5. **README.md**:
   ✅ Başlık: "HARÇ MUHASEBE - Yapay Zeka Destekli İnşaat Muhasebe Sistemi"
   ✅ Copyright: © 2025 HARÇ MUHASEBE

6. **SEO_CHECKLIST.md**:
   ✅ İşletme Adı: HARÇ MUHASEBE (Yapay Zeka Destekli İnşaat Muhasebe Sistemi)

7. **sitemap.xml**:
   ✅ video:uploader: HARÇ MUHASEBE

8. **assets/js/chatbot.js**:
   ✅ firma_adi: HARÇ MUHASEBE (2 yer)

---

🎯 Yapay Zeka Vurguları Eklendi:

1. **Title Tags:**
   "Yapay Zeka Destekli" vurgusu
   "OCR ve AI Raporlama" vurgusu

2. **Meta Descriptions:**
   "yapay zeka destekli inşaat muhasebesi"
   "AI raporlama"
   "7/24 chatbot"
   ⭐5.0/5 rating korundu

3. **Hero Section:**
   H1: "Yapay Zeka Destekli İnşaat Muhasebesi - HARÇ MUHASEBE"
   Subtitle: "<strong>Yapay zeka ile</strong> HARÇ MUHASEBE"

4. **Branding:**
   Tüm "HARÇ YAZILIM" → "HARÇ MUHASEBE"
   Büyük harf: "HARÇ MUHASEBE" formatı

---

📊 Güncellenen Dosyalar: 8
📝 Toplam Değişiklik: 50+ yer

---

✨ Sonuç:
- Marka tutarlılığı sağlandı
- Yapay zeka vurgusu güçlendirildi
- SEO için optimize edildi
- HARÇ MUHASEBE kimliği netleştirildi 🚀

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "prod": "vercel dev"
   },
   "keywords": ["muhasebe", "inşaat", "chatbot"],
-  "author": "HARÇ YAZILIM",
+  "author": "HARÇ MUHASEBE",
   "license": "MIT",
   "dependencies": {
     "dotenv": "^16.0.3",
